# Screen2Action

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  DOCKER_IMPROVEMENTS.md  DOCKER_TEST_RESULTS.md  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.linux  Dockerfile.mac  Dockerfile.minimal  Dockerfile.optimized  Dockerfile.test  GEMINI.md  README.md  TESTING.md  dev.html  docker-compose.yml  e2e-test.sh  electron-builder.json  index.html  jest.config.js  output.txt  package-lock.json  package.json  playwright.config.ts  start.bat  start.sh  tailwind.config.js  test-docker-github-action.sh  test-review-full.sh  test-review-simple.sh  test-review.html  test-review.sh  tsconfig.electron.json  tsconfig.json  vite.config.dev.mjs  vite.config.mjs
.husky/: pre-commit
assets/: icon.icns
backend/: .env.example  README.md  main.spec  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  run.py  start_backend.bat  start_backend.sh
backend/app/: main.py  websocket_client.py
backend/app/models/: messages.py
backend/app/services/: llm_service.py  mcp_client.py  mcp_service.py  recording_service.py  screenshot_service.py
backend/config/: mcp_config.json  mcp_servers.json
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_connection_manager.py  test_llm_service.py  test_main_app.py  test_mcp_service.py  test_recording_service.py  test_screenshot_service.py  test_websocket_client.py
config/: app.json  mcp_config.json
docs/: DMG_BUILD_GUIDE.md  DOCKER_BUILD.md  (+2 more)
(+52 files in other folders)
