[project]
name = "screen2action-backend"
version = "1.0.0"
description = "Screen2Action Backend - AI-powered screen recording and screenshot tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.50",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.1",
    "sounddevice>=0.4.6",
    "scipy>=1.10.0",
    "python-json-logger>=2.0.0",
    "tenacity>=8.0.0",
]

[project.scripts]
start = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipython>=8.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true